# furrifier-fo4

./: .gitignore  FURRIFIER_HOWTO.md  PLAN_EAC_HEADGEAR.md  PLAN_FACEGEN_BA2.md  PLAN_FACEGEN_SHADER_PARITY.md  PLAN_FFO_KIT_BUILD.md  README.md  RECIPES.md  build_ffo_kit.py  builtin.toml  furrify_fo4.spec  headgear_patch.py  launcher.py  launcher_gui.py  pyproject.toml
fomod/sfw/: ModuleConfig.xml
races/: ffo_races.toml
races/examples/: facemorphs_example.toml
schemes/: ffo_scheme.toml  ffo_test.toml  single_race.toml  test_facegen.toml  user.toml
src/furrifier_fo4/: __init__.py  __main__.py  _version.py  armor.py  config.py  customization.py  extract.py  facemorphs.py  furrify.py  gui.py  headparts.py  loader.py  main.py  models.py  pack.py  plugin_picker.py  scheme.py  session.py  templates.py  tints.py  util.py  validate.py  variants.py  world.py
src/furrifier_fo4/facegen/: __init__.py  _worker.py  assemble.py  assets.py  basehead.py  blend.py  composite.py  dds.py  (+4 more)
tests/: conftest.py  test_armor.py  test_asset_resolver_handles.py  test_basehead.py  test_cancel.py  test_catalog.py  test_cli.py  test_customization.py  test_esl.py  test_facebones.py  test_facegen_assemble.py  test_facegen_blend.py  test_facegen_composite.py  test_facegen_parallel.py  test_facegen_parity.py  test_facegen_paths.py  test_facemorphs.py  test_family_breed.py  test_headparts.py  test_models.py  test_pack.py  test_scheme.py  test_story_protected.py  test_templates.py  test_tints.py  test_validate.py  test_variant_unique_expansion.py  test_variants.py  test_weight.py  test_world.py
(+30 files in other folders)
