[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "furrifier-fo4"
version = "0.1.0"
description = "Batch-convert Fallout 4 NPCs to furry races"
requires-python = ">=3.11"
dependencies = ["esplib"]

[project.scripts]
furrify-fo4 = "furrifier_fo4.main:main"

[project.gui-scripts]
furrify-fo4-gui = "furrifier_fo4.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"furrifier_fo4" = ["assets/*.svg", "preview/*.qml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gamefiles: marks tests that require real Fallout 4 game files",
]
